plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
	id 'org.sonarqube' version '4.0.0.2929'
}

group = 'com.jcja'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

sonarqube {
	properties {
		property "sonar.host.url","http://157.173.122.1:9000"
		property "sonar.login","squ_12588c140fc2012b9317233038f6c837974b92fd"
		property "sonar.coverage.exclusions","**/bd/**, **/orm/**,**/dto/**, **/controller/**"
	}
}
jacocoTestReport {
	dependsOn test
	reports {
		xml.required.set(true)
		html.required.set(true)

	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql:42.2.24'
	runtimeOnly 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}



